[package]
name = "img-dedup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
image = "0.23.0"
img_hash = "3.2.0"
iced = {version = "0.6", features = ["wgpu", "image", "tokio"]}
tokio = {version = "1.24.1", features = ["rt-multi-thread"]}
