[package]
name = "img-dedup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
image = "0.23.14"
img_hash = "3.2.0"
iced = {version = "0.6", features = ["wgpu", "image"]}
rayon = "1.6.1"
log = "0.4.17"
env_logger = "0.10.0"
